torrent-stack/qbittorrent+gluetun/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-webui
  namespace: torrent-stack
spec:
  selector:
    app: qbittorrent-vpn
  ports:
    - protocol: TCP
      port: 8112
      targetPort: 8112
